public/css/mainchat.css
html,body {
    margin:0px;
    height:100%;
}

.main {
    background-color: #1b1b1b;
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23393939' fill-opacity='0.69'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
    height:100%;
    display: flex;
}

.chat {
    background-color: #141414;
    border-radius: 2vmin;
    display: flex;
    flex: 1;
    flex-direction: column;
    margin: 3vmin;
    box-shadow: 0px 0px 10px rgb(0, 0, 0);
}

.chatInputField {
    display: flex;
    width: inherit;
    overflow: hidden;
    resize: none;
    max-height: 40%;
    min-height: 5%;
    flex-direction: column;
    overflow-y: auto;
    

    background-color: #2b2b2e;
    color:aliceblue;
    font-family: 'Montserrat', sans-serif;
    font-size: 3vmin;
    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.171);
    border: none;
    
    border-radius: 2vmin;
    margin-bottom: 2vmin;
    margin-left: 1vmin;
    margin-right: 1vmin;
    padding-top: 1vmin;
    padding-left: 2vmin;
    margin: 0.5vmin;
    margin-top: auto;
}

.chatInputField > textarea {
    flex:1;
}

.sidebar {
    background-color: #141414;
    top: 0;
    bottom: 0;
    overflow-y: auto;
    width: 20%;
    justify-self: left;
    display: flex;
    flex-direction: column;
    box-shadow: 5px 5px 10px rgb(0, 0, 0);
}

.sidebarElement {
    background-color: #18181a;
    color:aliceblue;
    width:inherit;
    font-family: 'Montserrat', sans-serif;
    font-size: large;
    border-radius: 1vmin;
    margin: 1vmin;
    padding-top: 2vmin;
    padding-bottom: 2vmin;
    padding-left: 1vmin;
    cursor: pointer;
    text-align: left;
}

.sideBottomBar {
    display: flex;
    background-color: #1f1f22;
    color: aliceblue;
    align-self: flex-end;
    margin-top: auto;
    height: 10%;
    width: 100%;
    flex-direction: row;
    box-shadow: 5px 5px 10px rgb(0, 0, 0);
}

.sideBottomBarElement {
    background-color: #18181a;
    color:aliceblue;
    font-family: 'Montserrat', sans-serif;
    font-size: large;
    border-radius: 1vmin;
    margin: 1vmin;
    padding-top: 2vmin;
    padding-bottom: 2vmin;
    padding-left: 1vmin;
    cursor: pointer;
    text-align: left;
    display: inline-block;
}

.message {
    background-color: #242427;
    border-radius: 2vmin;
    width: inherit;
    margin:1vmin;
    padding: 1vmin;
}

.messageUserAreaText {
    font-family: 'Montserrat', sans-serif;
    color:aliceblue;
    font-size: medium;
    font-weight: bolder;
}

.messageTextArea {
    font-family: 'Montserrat', sans-serif;
    color:aliceblue;
}

.sideBottomBarElement:hover {
    background-color: #242427;
}

.sidebarElement:hover {
    background-color: #212124;
}

/* width */
::-webkit-scrollbar {
    width: 10px;
}
  
/* Track */
::-webkit-scrollbar-track {
    background: #141414;
}
  
/* Handle */
::-webkit-scrollbar-thumb {
    background: rgb(78, 78, 78);
}
  
/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
    background: #555;
}

